# ChatserverBaseofMuduo

./: CMakeLists.txt  README.md  autobuild.sh
include/client/: client.hpp
include/public/: keyguard.hpp  public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/dataoperate/: group.hpp  useroperate.hpp
include/server/db/: connectionpool.hpp  mysqlconnection.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  client.cpp  main.cpp  mian.cpp  stresstest.cpp
src/public/: keyguard.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/dataoperate/: groupoperate.cpp  offlinemsgoperate.cpp  useroperate.cpp
src/server/db/: db.cpp  mysqlconnection.cpp
src/server/redis/: redis.cpp
src/server/test/: test.cpp
